[project]
name = "aperion-gatekeeper"
version = "1.2.1"
description = "Unified Authentication & Authorization for Aperion Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Aperion Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/invictustitan2/aperion-gatekeeper"
Documentation = "https://github.com/invictustitan2/aperion-gatekeeper#readme"
Repository = "https://github.com/invictustitan2/aperion-gatekeeper"
"Bug Tracker" = "https://github.com/invictustitan2/aperion-gatekeeper/issues"

dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.4",  # CVE-2024-26130 fix
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aperion_gatekeeper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "C4"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Long-running stability tests (60+ seconds)",
]
